--- a/css/films.css
+++ b/css/films.css
@@ -9,6 +9,8 @@
     max-width: 255px;
     width: 100%;
     height: 366px;
+    border-radius: 6px;
+    overflow: hidden;
 }
 
 .film__card-img {
@@ -22,4 +24,74 @@
 
 .films__card-body {
     padding: 54px 15px 18px;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.films__card-icon {
+    font-size: 40px;
+    margin-bottom: 12px;
+
+}
+
+.film__card-time {
+    width: 100px;
+    height: 24px;
+    padding: 5px 27px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #070F1933;
+    border-radius: 10px;
+    border: 1px solid var(--white);
+    font-family: var(--MR);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 10px;
+    color: var(--white);
+    margin-bottom: 30px;
+}
+
+.film__card-title {
+    font-family: var(--MR);
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 27px;
+    color: var(--white);
+    margin-bottom: 12px;
+}
+.film__card-desc{
+ font-family:var(--RR);
+font-size: 14px;
+font-weight: 400;
+line-height: 21px;
+text-align: left;
+display: -webkit-box;
+-webkit-line-clamp: 7;
+-webkit-box-orient: vertical;
+overflow: hidden;
+
+}
+.films__wrap{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+@media screen and (max-width:992px) {
+    .films__wrap{
+        flex-wrap: wrap;
+    }
+    .films__card{
+        max-width: 320px;
+    }
+}
+@media screen and (768px) {
+    .films__card{
+        max-width: 255px;
+    }
 }
